# phishguard

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LIMITATIONS.md  MODEL_CARD.md  Makefile  README.md  pyproject.toml
configs/: fusion.yaml  html_model.yaml  screenshot_model.yaml  url_model.yaml  url_model_v0_2.yaml
docker/: Dockerfile  docker-compose.yml
docs/task-briefs/: 2026-04-30-v0.3-data-plan.md
extension/: README.md  background.js  manifest.json  popup.html  popup.js
reports/: evaluation_v0_1.md  evaluation_v0_2.md  url_baseline_HONEST.txt  url_baseline_LEAKY.txt  url_baseline_v0_1.txt  url_baseline_v0_2.txt  url_probe_tranco.txt
scripts/: inspect_url_baseline.py
src/phishguard/: __init__.py
src/phishguard/data/: build_multimodal_dataset.py  load.py  scrape.py
src/phishguard/features/: __init__.py  url_features.py
src/phishguard/models/: fusion.py  screenshot_model.py
src/phishguard/monitoring/: drift.py
src/phishguard/serving/: api.py  prediction_log.py
src/phishguard/training/: evaluate.py  train_fusion.py  train_html.py  train_screenshot.py  train_url.py
tests/: conftest.py  test_api_smoke.py  test_canonicalize.py  test_label_polarity.py  test_no_leakage.py  test_prediction_log.py  test_url_features.py
